publishes by gmf

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,5 +1,6 @@
 /* Common */
-$roboto-font-path: "~materialize-css/fonts/roboto/";
-$materialIcon-font-path: "../fonts/materialIcon/";
+$roboto-font-path: "../fonts/vendor/gmf/roboto/";
+$materialIcon-font-path: "../fonts/vendor/gmf/materialIcon/";
 
 $font-roboto: Roboto, 'Noto Sans', Noto, sans-serif;
+
